--- a/archives/toutiao-search/2024-02-18.md
+++ b/archives/toutiao-search/2024-02-18.md
@@ -1,50 +1,69 @@
 # 2024-02-18
 
-共 247 条
+共 263 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Feb 18 2024 16:00:50 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Feb 18 2024 17:00:57 GMT+0800 (China Standard Time) -->
 1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
-1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
-1. [春节国内出游人次创新高](https://so.toutiao.com/search?keyword=春节国内出游人次创新高)
 1. [司机卡点最后一分钟免费下高速](https://so.toutiao.com/search?keyword=司机卡点最后一分钟免费下高速)
+1. [春节国内出游人次创新高](https://so.toutiao.com/search?keyword=春节国内出游人次创新高)
+1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
 1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
-1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
 1. [小车零点后下高速被收全程费用](https://so.toutiao.com/search?keyword=小车零点后下高速被收全程费用)
-1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
-1. [国产三蹦子今年可能去海外建厂](https://so.toutiao.com/search?keyword=国产三蹦子今年可能去海外建厂)
-1. [女子在银行着急办业务跪地求号](https://so.toutiao.com/search?keyword=女子在银行着急办业务跪地求号)
-1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
+1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
+1. [小学生寒假作业落巴黎 妈妈还不知](https://so.toutiao.com/search?keyword=小学生寒假作业落巴黎+妈妈还不知)
+1. [沈腾方辟谣新电影](https://so.toutiao.com/search?keyword=沈腾方辟谣新电影)
+1. [匈牙利总理欧尔班会见王小洪](https://so.toutiao.com/search?keyword=匈牙利总理欧尔班会见王小洪)
 1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
-1. [海鲜与维C不能同吃？谣言](https://so.toutiao.com/search?keyword=海鲜与维C不能同吃？谣言)
-1. [航拍江苏一工厂爆炸：现场一片狼藉](https://so.toutiao.com/search?keyword=航拍江苏一工厂爆炸：现场一片狼藉)
-1. [刚服完刑男子杀一家人？警方回应](https://so.toutiao.com/search?keyword=刚服完刑男子杀一家人？警方回应)
-1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
-1. [网友去年就在小区拍到瘦了的贾玲](https://so.toutiao.com/search?keyword=网友去年就在小区拍到瘦了的贾玲)
-1. [王毅会见阿根廷外长蒙迪诺](https://so.toutiao.com/search?keyword=王毅会见阿根廷外长蒙迪诺)
-1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
-1. [马丽第一次见赵丽颖想抱抱她](https://so.toutiao.com/search?keyword=马丽第一次见赵丽颖想抱抱她)
-1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
+1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
+1. [高速免费最后时刻司机狂按喇叭](https://so.toutiao.com/search?keyword=高速免费最后时刻司机狂按喇叭)
+1. [金正恩原声讲话曝光 目标直指韩国](https://so.toutiao.com/search?keyword=金正恩原声讲话曝光+目标直指韩国)
 1. [《摔跤吧！爸爸》小芭比塔演员去世](https://so.toutiao.com/search?keyword=《摔跤吧！爸爸》小芭比塔演员去世)
 1. [A股节后能否“开门红”](https://so.toutiao.com/search?keyword=A股节后能否“开门红”)
-1. [高速堵车有司机呼呼大睡](https://so.toutiao.com/search?keyword=高速堵车有司机呼呼大睡)
-1. [1家5口从三亚飞回新疆要花10万](https://so.toutiao.com/search?keyword=1家5口从三亚飞回新疆要花10万)
-1. [谭德塞就暴发“X疾病”可能性警告](https://so.toutiao.com/search?keyword=谭德塞就暴发“X疾病”可能性警告)
-1. [日本女生在中国朋友家过年看抗日剧](https://so.toutiao.com/search?keyword=日本女生在中国朋友家过年看抗日剧)
 1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
-1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
-1. [浙江青田挖笋失联村民已无生命体征](https://so.toutiao.com/search?keyword=浙江青田挖笋失联村民已无生命体征)
-1. [传比亚迪秦plus dmi将官降到7.98万](https://so.toutiao.com/search?keyword=传比亚迪秦plus+dmi将官降到7.98万)
+1. [小伙套大鹅宛如来进货](https://so.toutiao.com/search?keyword=小伙套大鹅宛如来进货)
+1. [国产三蹦子今年可能去海外建厂](https://so.toutiao.com/search?keyword=国产三蹦子今年可能去海外建厂)
+1. [过年对于留守老人就像一场热闹的梦](https://so.toutiao.com/search?keyword=过年对于留守老人就像一场热闹的梦)
+1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
+1. [颜宁感慨深圳半年将毛坯房变实验室](https://so.toutiao.com/search?keyword=颜宁感慨深圳半年将毛坯房变实验室)
+1. [天津4人入选中国女排](https://so.toutiao.com/search?keyword=天津4人入选中国女排)
+1. [女子在银行着急办业务跪地求号](https://so.toutiao.com/search?keyword=女子在银行着急办业务跪地求号)
+1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
+1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
+1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
+1. [女排集训张常宁回归 朱婷未入围](https://so.toutiao.com/search?keyword=女排集训张常宁回归+朱婷未入围)
+1. [网友去年就在小区拍到瘦了的贾玲](https://so.toutiao.com/search?keyword=网友去年就在小区拍到瘦了的贾玲)
 1. [湖南一洒水车碾压路人后逃逸](https://so.toutiao.com/search?keyword=湖南一洒水车碾压路人后逃逸)
-1. [堵车把车里的阿拉斯加堵哭了](https://so.toutiao.com/search?keyword=堵车把车里的阿拉斯加堵哭了)
-1. [沈忠祥少将逝世](https://so.toutiao.com/search?keyword=沈忠祥少将逝世)
+1. [谭德塞就暴发“X疾病”可能性警告](https://so.toutiao.com/search?keyword=谭德塞就暴发“X疾病”可能性警告)
+1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
+1. [1家5口从三亚飞回新疆要花10万](https://so.toutiao.com/search?keyword=1家5口从三亚飞回新疆要花10万)
 1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
+1. [航拍江苏一工厂爆炸：现场一片狼藉](https://so.toutiao.com/search?keyword=航拍江苏一工厂爆炸：现场一片狼藉)
+1. [A股明日开市](https://so.toutiao.com/search?keyword=A股明日开市)
 1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
+1. [堵车把车里的阿拉斯加堵哭了](https://so.toutiao.com/search?keyword=堵车把车里的阿拉斯加堵哭了)
+1. [海口市琼州海峡春运工作新闻发布会](https://so.toutiao.com/search?keyword=海口市琼州海峡春运工作新闻发布会)
+1. [王毅会见塞尔维亚总统武契奇](https://so.toutiao.com/search?keyword=王毅会见塞尔维亚总统武契奇)
+1. [颜宁称在深圳已梦想成真](https://so.toutiao.com/search?keyword=颜宁称在深圳已梦想成真)
+1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
+1. [马丽第一次见赵丽颖想抱抱她](https://so.toutiao.com/search?keyword=马丽第一次见赵丽颖想抱抱她)
+1. [日本女生在中国朋友家过年看抗日剧](https://so.toutiao.com/search?keyword=日本女生在中国朋友家过年看抗日剧)
+1. [浙江青田挖笋失联村民已无生命体征](https://so.toutiao.com/search?keyword=浙江青田挖笋失联村民已无生命体征)
+1. [开工了](https://so.toutiao.com/search?keyword=开工了)
+1. [媒体：A股龙年首个交易日值得期待](https://so.toutiao.com/search?keyword=媒体：A股龙年首个交易日值得期待)
+1. [光头强演我和我同事的上班状态](https://so.toutiao.com/search?keyword=光头强演我和我同事的上班状态)
+1. [邱毅谈美军特战小组常驻金门](https://so.toutiao.com/search?keyword=邱毅谈美军特战小组常驻金门)
+1. [8090后的童年回忆玩具](https://so.toutiao.com/search?keyword=8090后的童年回忆玩具)
+1. [海鲜与维C不能同吃？谣言](https://so.toutiao.com/search?keyword=海鲜与维C不能同吃？谣言)
+1. [刚服完刑男子杀一家人？警方回应](https://so.toutiao.com/search?keyword=刚服完刑男子杀一家人？警方回应)
+1. [王毅会见阿根廷外长蒙迪诺](https://so.toutiao.com/search?keyword=王毅会见阿根廷外长蒙迪诺)
+1. [高速堵车有司机呼呼大睡](https://so.toutiao.com/search?keyword=高速堵车有司机呼呼大睡)
+1. [传比亚迪秦plus dmi将官降到7.98万](https://so.toutiao.com/search?keyword=传比亚迪秦plus+dmi将官降到7.98万)
+1. [沈忠祥少将逝世](https://so.toutiao.com/search?keyword=沈忠祥少将逝世)
 1. [加沙超2.88万人死于本轮巴以冲突](https://so.toutiao.com/search?keyword=加沙超2.88万人死于本轮巴以冲突)
 1. [甘肃多地为滞留旅客提供免费住宿](https://so.toutiao.com/search?keyword=甘肃多地为滞留旅客提供免费住宿)
 1. [外媒：美国阿拉斯加州分离情绪高涨](https://so.toutiao.com/search?keyword=外媒：美国阿拉斯加州分离情绪高涨)
 1. [第二十条帮的是每个普通人](https://so.toutiao.com/search?keyword=第二十条帮的是每个普通人)
-1. [颜宁称在深圳已梦想成真](https://so.toutiao.com/search?keyword=颜宁称在深圳已梦想成真)
 1. [海南离岛小车堵到“∞”型转圈圈](https://so.toutiao.com/search?keyword=海南离岛小车堵到“∞”型转圈圈)
 1. [“AIT”处长为何拜会韩国瑜](https://so.toutiao.com/search?keyword=“AIT”处长为何拜会韩国瑜)
 1. [拜登痛斥众议院关键时刻去“度假”](https://so.toutiao.com/search?keyword=拜登痛斥众议院关键时刻去“度假”)
@@ -53,7 +72,6 @@
 1. [三亚机票今年为何涨得那么猛](https://so.toutiao.com/search?keyword=三亚机票今年为何涨得那么猛)
 1. [湖南省南县捣毁一卖淫窝点 6人被抓](https://so.toutiao.com/search?keyword=湖南省南县捣毁一卖淫窝点+6人被抓)
 1. [广东实施基础研究十年“卓粤”计划](https://so.toutiao.com/search?keyword=广东实施基础研究十年“卓粤”计划)
-1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
 1. [三亚部分返程机票回落至3000元档](https://so.toutiao.com/search?keyword=三亚部分返程机票回落至3000元档)
 1. [中国经济新春面面观](https://so.toutiao.com/search?keyword=中国经济新春面面观)
 1. [高速堵车男子摆摊卖炒面](https://so.toutiao.com/search?keyword=高速堵车男子摆摊卖炒面)
@@ -75,13 +93,11 @@
 1. [两个贾玲对唱](https://so.toutiao.com/search?keyword=两个贾玲对唱)
 1. [冯巩在家说了算](https://so.toutiao.com/search?keyword=冯巩在家说了算)
 1. [台当局叫停赴陆团引起马英九批评](https://so.toutiao.com/search?keyword=台当局叫停赴陆团引起马英九批评)
-1. [邱毅谈美军特战小组常驻金门](https://so.toutiao.com/search?keyword=邱毅谈美军特战小组常驻金门)
 1. [山东将迎大风降温天气](https://so.toutiao.com/search?keyword=山东将迎大风降温天气)
 1. [泰国前总理他信获假释](https://so.toutiao.com/search?keyword=泰国前总理他信获假释)
 1. [春节10天花掉大半年积蓄](https://so.toutiao.com/search?keyword=春节10天花掉大半年积蓄)
 1. [女子输错导航被丈夫怒抛高速](https://so.toutiao.com/search?keyword=女子输错导航被丈夫怒抛高速)
 1. [拜登：乌军撤退是因国会不作为](https://so.toutiao.com/search?keyword=拜登：乌军撤退是因国会不作为)
-1. [8090后的童年回忆玩具](https://so.toutiao.com/search?keyword=8090后的童年回忆玩具)
 1. [男子返程在车上忍不住默默流泪](https://so.toutiao.com/search?keyword=男子返程在车上忍不住默默流泪)
 1. [孙楠回应《歌手3》退赛事件](https://so.toutiao.com/search?keyword=孙楠回应《歌手3》退赛事件)
 1. [台媒炒作大陆科考船现身台东部海域](https://so.toutiao.com/search?keyword=台媒炒作大陆科考船现身台东部海域)
