--- a/archives/toutiao-search/2024-02-18.md
+++ b/archives/toutiao-search/2024-02-18.md
@@ -1,63 +1,76 @@
 # 2024-02-18
 
-共 276 条
+共 288 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Feb 18 2024 18:00:35 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Feb 18 2024 19:01:00 GMT+0800 (China Standard Time) -->
 1. [司机卡点最后一分钟免费下高速](https://so.toutiao.com/search?keyword=司机卡点最后一分钟免费下高速)
 1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
 1. [春节国内出游人次创新高](https://so.toutiao.com/search?keyword=春节国内出游人次创新高)
-1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
 1. [高速免费最后时刻司机狂按喇叭](https://so.toutiao.com/search?keyword=高速免费最后时刻司机狂按喇叭)
 1. [小车零点后下高速被收全程费用](https://so.toutiao.com/search?keyword=小车零点后下高速被收全程费用)
 1. [小学生寒假作业落巴黎 妈妈还不知](https://so.toutiao.com/search?keyword=小学生寒假作业落巴黎+妈妈还不知)
-1. [堵车把车里的阿拉斯加堵哭了](https://so.toutiao.com/search?keyword=堵车把车里的阿拉斯加堵哭了)
+1. [左右哥“再就业”](https://so.toutiao.com/search?keyword=左右哥“再就业”)
+1. [金正恩原声讲话曝光 目标直指韩国](https://so.toutiao.com/search?keyword=金正恩原声讲话曝光+目标直指韩国)
 1. [官方辟谣花3万包游艇从三亚到湛江](https://so.toutiao.com/search?keyword=官方辟谣花3万包游艇从三亚到湛江)
 1. [匈牙利总理欧尔班会见王小洪](https://so.toutiao.com/search?keyword=匈牙利总理欧尔班会见王小洪)
 1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
-1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
-1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
-1. [《摔跤吧！爸爸》小芭比塔演员去世](https://so.toutiao.com/search?keyword=《摔跤吧！爸爸》小芭比塔演员去世)
-1. [1家5口从三亚飞回新疆要花10万](https://so.toutiao.com/search?keyword=1家5口从三亚飞回新疆要花10万)
-1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
+1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
 1. [国产三蹦子今年可能去海外建厂](https://so.toutiao.com/search?keyword=国产三蹦子今年可能去海外建厂)
 1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
-1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
-1. [男子离家返程 母亲默默流泪](https://so.toutiao.com/search?keyword=男子离家返程+母亲默默流泪)
+1. [《摔跤吧！爸爸》小芭比塔演员去世](https://so.toutiao.com/search?keyword=《摔跤吧！爸爸》小芭比塔演员去世)
 1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
 1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
-1. [女子在银行着急办业务跪地求号](https://so.toutiao.com/search?keyword=女子在银行着急办业务跪地求号)
-1. [贾玲减肥成功后变拘束了吗](https://so.toutiao.com/search?keyword=贾玲减肥成功后变拘束了吗)
-1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
+1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
+1. [西安沙尘暴](https://so.toutiao.com/search?keyword=西安沙尘暴)
 1. [邱毅谈美军特战小组常驻金门](https://so.toutiao.com/search?keyword=邱毅谈美军特战小组常驻金门)
 1. [A股明日开市](https://so.toutiao.com/search?keyword=A股明日开市)
-1. [网友去年就在小区拍到瘦了的贾玲](https://so.toutiao.com/search?keyword=网友去年就在小区拍到瘦了的贾玲)
 1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
-1. [金正恩原声讲话曝光 目标直指韩国](https://so.toutiao.com/search?keyword=金正恩原声讲话曝光+目标直指韩国)
+1. [麦克朗卫冕全明星扣篮大赛冠军](https://so.toutiao.com/search?keyword=麦克朗卫冕全明星扣篮大赛冠军)
 1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
-1. [西安沙尘暴](https://so.toutiao.com/search?keyword=西安沙尘暴)
-1. [航拍江苏一工厂爆炸：现场一片狼藉](https://so.toutiao.com/search?keyword=航拍江苏一工厂爆炸：现场一片狼藉)
+1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
+1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
+1. [乌克兰外长接受采访时抽起了雪茄](https://so.toutiao.com/search?keyword=乌克兰外长接受采访时抽起了雪茄)
 1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
-1. [甘肃启动交通突发事件Ⅲ级应急响应](https://so.toutiao.com/search?keyword=甘肃启动交通突发事件Ⅲ级应急响应)
 1. [徐冬冬尹子维订婚](https://so.toutiao.com/search?keyword=徐冬冬尹子维订婚)
-1. [网友遇小伙在高速卖炒粉 生意很好](https://so.toutiao.com/search?keyword=网友遇小伙在高速卖炒粉+生意很好)
+1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
+1. [新疆气温-52.3℃刷新历史最低极值](https://so.toutiao.com/search?keyword=新疆气温-52.3℃刷新历史最低极值)
+1. [航拍江苏一工厂爆炸：现场一片狼藉](https://so.toutiao.com/search?keyword=航拍江苏一工厂爆炸：现场一片狼藉)
+1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
 1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
+1. [张名扬101秒KO对手](https://so.toutiao.com/search?keyword=张名扬101秒KO对手)
+1. [1家5口从三亚飞回新疆要花10万](https://so.toutiao.com/search?keyword=1家5口从三亚飞回新疆要花10万)
+1. [高速堵车第一辆车在干啥](https://so.toutiao.com/search?keyword=高速堵车第一辆车在干啥)
+1. [印外长当着布林肯面回答涉美俄问题](https://so.toutiao.com/search?keyword=印外长当着布林肯面回答涉美俄问题)
+1. [游客吐槽长白山15分钟车程要150元](https://so.toutiao.com/search?keyword=游客吐槽长白山15分钟车程要150元)
 1. [颜宁称在深圳已梦想成真](https://so.toutiao.com/search?keyword=颜宁称在深圳已梦想成真)
-1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
-1. [女子高铁上看高速堵车 堵十多公里](https://so.toutiao.com/search?keyword=女子高铁上看高速堵车+堵十多公里)
+1. [甘肃一酒店免费接收30余名滞留旅客](https://so.toutiao.com/search?keyword=甘肃一酒店免费接收30余名滞留旅客)
+1. [男子酒驾弃车逃跑被警民合力抓回](https://so.toutiao.com/search?keyword=男子酒驾弃车逃跑被警民合力抓回)
 1. [颜宁感慨深圳半年将毛坯房变实验室](https://so.toutiao.com/search?keyword=颜宁感慨深圳半年将毛坯房变实验室)
+1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
+1. [魅族宣布全面押注AI](https://so.toutiao.com/search?keyword=魅族宣布全面押注AI)
+1. [男子高速路旁摆摊卖炒粉](https://so.toutiao.com/search?keyword=男子高速路旁摆摊卖炒粉)
+1. [丈夫被妻子嫌弃不挣钱忍不住发脾气](https://so.toutiao.com/search?keyword=丈夫被妻子嫌弃不挣钱忍不住发脾气)
+1. [台舆论关注大陆厦金海域巡查常态化](https://so.toutiao.com/search?keyword=台舆论关注大陆厦金海域巡查常态化)
+1. [小伙套大鹅宛如来进货](https://so.toutiao.com/search?keyword=小伙套大鹅宛如来进货)
+1. [非盟领导人谴责以色列军事行动](https://so.toutiao.com/search?keyword=非盟领导人谴责以色列军事行动)
+1. [堵车把车里的阿拉斯加堵哭了](https://so.toutiao.com/search?keyword=堵车把车里的阿拉斯加堵哭了)
+1. [男子离家返程 母亲默默流泪](https://so.toutiao.com/search?keyword=男子离家返程+母亲默默流泪)
+1. [女子在银行着急办业务跪地求号](https://so.toutiao.com/search?keyword=女子在银行着急办业务跪地求号)
+1. [贾玲减肥成功后变拘束了吗](https://so.toutiao.com/search?keyword=贾玲减肥成功后变拘束了吗)
+1. [网友去年就在小区拍到瘦了的贾玲](https://so.toutiao.com/search?keyword=网友去年就在小区拍到瘦了的贾玲)
+1. [甘肃启动交通突发事件Ⅲ级应急响应](https://so.toutiao.com/search?keyword=甘肃启动交通突发事件Ⅲ级应急响应)
+1. [网友遇小伙在高速卖炒粉 生意很好](https://so.toutiao.com/search?keyword=网友遇小伙在高速卖炒粉+生意很好)
+1. [女子高铁上看高速堵车 堵十多公里](https://so.toutiao.com/search?keyword=女子高铁上看高速堵车+堵十多公里)
 1. [龙年首周解禁股出炉](https://so.toutiao.com/search?keyword=龙年首周解禁股出炉)
 1. [女子高速遇陌生男子爬车顶抢方向盘](https://so.toutiao.com/search?keyword=女子高速遇陌生男子爬车顶抢方向盘)
 1. [极兔快递股价跳水](https://so.toutiao.com/search?keyword=极兔快递股价跳水)
-1. [魅族宣布全面押注AI](https://so.toutiao.com/search?keyword=魅族宣布全面押注AI)
-1. [印外长当着布林肯面回答涉美俄问题](https://so.toutiao.com/search?keyword=印外长当着布林肯面回答涉美俄问题)
 1. [券商：2024年是新一轮牛市起点之年](https://so.toutiao.com/search?keyword=券商：2024年是新一轮牛市起点之年)
 1. [专家建议上班第一天少干点活](https://so.toutiao.com/search?keyword=专家建议上班第一天少干点活)
 1. [大量车占应急车道警车2公里走2小时](https://so.toutiao.com/search?keyword=大量车占应急车道警车2公里走2小时)
 1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
 1. [沈腾方辟谣新电影](https://so.toutiao.com/search?keyword=沈腾方辟谣新电影)
 1. [A股节后能否“开门红”](https://so.toutiao.com/search?keyword=A股节后能否“开门红”)
-1. [小伙套大鹅宛如来进货](https://so.toutiao.com/search?keyword=小伙套大鹅宛如来进货)
 1. [过年对于留守老人就像一场热闹的梦](https://so.toutiao.com/search?keyword=过年对于留守老人就像一场热闹的梦)
 1. [天津4人入选中国女排](https://so.toutiao.com/search?keyword=天津4人入选中国女排)
 1. [女排集训张常宁回归 朱婷未入围](https://so.toutiao.com/search?keyword=女排集训张常宁回归+朱婷未入围)
@@ -197,7 +210,6 @@
 1. [普京催促33岁电力公司员工要孩子](https://so.toutiao.com/search?keyword=普京催促33岁电力公司员工要孩子)
 1. [丈母娘买三个冰柜存放准备的吃食](https://so.toutiao.com/search?keyword=丈母娘买三个冰柜存放准备的吃食)
 1. [印度男子怀疑妻子不忠将其斩首](https://so.toutiao.com/search?keyword=印度男子怀疑妻子不忠将其斩首)
-1. [左右哥“再就业”](https://so.toutiao.com/search?keyword=左右哥“再就业”)
 1. [Sora大模型会让影视人失业吗](https://so.toutiao.com/search?keyword=Sora大模型会让影视人失业吗)
 1. [乌军从顿涅茨克地区重镇撤军](https://so.toutiao.com/search?keyword=乌军从顿涅茨克地区重镇撤军)
 1. [航运公司回应被指过海效率低](https://so.toutiao.com/search?keyword=航运公司回应被指过海效率低)
