--- a/archives/toutiao-search/2024-02-18.md
+++ b/archives/toutiao-search/2024-02-18.md
@@ -1,48 +1,68 @@
 # 2024-02-18
 
-共 288 条
+共 303 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Feb 18 2024 19:01:00 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Feb 18 2024 20:07:41 GMT+0800 (China Standard Time) -->
 1. [司机卡点最后一分钟免费下高速](https://so.toutiao.com/search?keyword=司机卡点最后一分钟免费下高速)
 1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
 1. [春节国内出游人次创新高](https://so.toutiao.com/search?keyword=春节国内出游人次创新高)
-1. [高速免费最后时刻司机狂按喇叭](https://so.toutiao.com/search?keyword=高速免费最后时刻司机狂按喇叭)
 1. [小车零点后下高速被收全程费用](https://so.toutiao.com/search?keyword=小车零点后下高速被收全程费用)
-1. [小学生寒假作业落巴黎 妈妈还不知](https://so.toutiao.com/search?keyword=小学生寒假作业落巴黎+妈妈还不知)
-1. [左右哥“再就业”](https://so.toutiao.com/search?keyword=左右哥“再就业”)
-1. [金正恩原声讲话曝光 目标直指韩国](https://so.toutiao.com/search?keyword=金正恩原声讲话曝光+目标直指韩国)
-1. [官方辟谣花3万包游艇从三亚到湛江](https://so.toutiao.com/search?keyword=官方辟谣花3万包游艇从三亚到湛江)
+1. [学校否认秦朗巴黎丢寒假作业](https://so.toutiao.com/search?keyword=学校否认秦朗巴黎丢寒假作业)
+1. [西安沙尘暴](https://so.toutiao.com/search?keyword=西安沙尘暴)
+1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
+1. [男子观影打呼噜遭暴打](https://so.toutiao.com/search?keyword=男子观影打呼噜遭暴打)
+1. [多地有人捡到钱包转发寻失主？假的](https://so.toutiao.com/search?keyword=多地有人捡到钱包转发寻失主？假的)
 1. [匈牙利总理欧尔班会见王小洪](https://so.toutiao.com/search?keyword=匈牙利总理欧尔班会见王小洪)
 1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
 1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
-1. [国产三蹦子今年可能去海外建厂](https://so.toutiao.com/search?keyword=国产三蹦子今年可能去海外建厂)
+1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
+1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
 1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
+1. [女子购物被收银员拒收一毛硬币](https://so.toutiao.com/search?keyword=女子购物被收银员拒收一毛硬币)
+1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
 1. [《摔跤吧！爸爸》小芭比塔演员去世](https://so.toutiao.com/search?keyword=《摔跤吧！爸爸》小芭比塔演员去世)
-1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
+1. [高速堵车第一辆车在干啥](https://so.toutiao.com/search?keyword=高速堵车第一辆车在干啥)
+1. [以军轰炸加沙地带中部至少40人死亡](https://so.toutiao.com/search?keyword=以军轰炸加沙地带中部至少40人死亡)
+1. [高速免费最后时刻司机狂按喇叭](https://so.toutiao.com/search?keyword=高速免费最后时刻司机狂按喇叭)
+1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
+1. [停火谈判遇阻 战火烧至加沙最南端](https://so.toutiao.com/search?keyword=停火谈判遇阻+战火烧至加沙最南端)
 1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
 1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
-1. [西安沙尘暴](https://so.toutiao.com/search?keyword=西安沙尘暴)
-1. [邱毅谈美军特战小组常驻金门](https://so.toutiao.com/search?keyword=邱毅谈美军特战小组常驻金门)
-1. [A股明日开市](https://so.toutiao.com/search?keyword=A股明日开市)
-1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
-1. [麦克朗卫冕全明星扣篮大赛冠军](https://so.toutiao.com/search?keyword=麦克朗卫冕全明星扣篮大赛冠军)
-1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
-1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
-1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
-1. [乌克兰外长接受采访时抽起了雪茄](https://so.toutiao.com/search?keyword=乌克兰外长接受采访时抽起了雪茄)
-1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
-1. [徐冬冬尹子维订婚](https://so.toutiao.com/search?keyword=徐冬冬尹子维订婚)
-1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
-1. [新疆气温-52.3℃刷新历史最低极值](https://so.toutiao.com/search?keyword=新疆气温-52.3℃刷新历史最低极值)
-1. [航拍江苏一工厂爆炸：现场一片狼藉](https://so.toutiao.com/search?keyword=航拍江苏一工厂爆炸：现场一片狼藉)
-1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
-1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
-1. [张名扬101秒KO对手](https://so.toutiao.com/search?keyword=张名扬101秒KO对手)
-1. [1家5口从三亚飞回新疆要花10万](https://so.toutiao.com/search?keyword=1家5口从三亚飞回新疆要花10万)
-1. [高速堵车第一辆车在干啥](https://so.toutiao.com/search?keyword=高速堵车第一辆车在干啥)
-1. [印外长当着布林肯面回答涉美俄问题](https://so.toutiao.com/search?keyword=印外长当着布林肯面回答涉美俄问题)
 1. [游客吐槽长白山15分钟车程要150元](https://so.toutiao.com/search?keyword=游客吐槽长白山15分钟车程要150元)
+1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
+1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
+1. [雷军晒为员工发开工红包视频](https://so.toutiao.com/search?keyword=雷军晒为员工发开工红包视频)
+1. [新疆气温-52.3℃刷新历史最低极值](https://so.toutiao.com/search?keyword=新疆气温-52.3℃刷新历史最低极值)
+1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
+1. [官方通报旅客挤不上K225次列车](https://so.toutiao.com/search?keyword=官方通报旅客挤不上K225次列车)
+1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
+1. [邱毅谈美军特战小组常驻金门](https://so.toutiao.com/search?keyword=邱毅谈美军特战小组常驻金门)
+1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
+1. [16岁女篮队员身高已超过姚明](https://so.toutiao.com/search?keyword=16岁女篮队员身高已超过姚明)
+1. [女考古学家仍用着40年前的灯绳](https://so.toutiao.com/search?keyword=女考古学家仍用着40年前的灯绳)
+1. [女子高速遇陌生男子爬车顶抢方向盘](https://so.toutiao.com/search?keyword=女子高速遇陌生男子爬车顶抢方向盘)
+1. [丈夫被妻子嫌弃不挣钱忍不住发脾气](https://so.toutiao.com/search?keyword=丈夫被妻子嫌弃不挣钱忍不住发脾气)
+1. [小学生寒假作业落巴黎 妈妈还不知](https://so.toutiao.com/search?keyword=小学生寒假作业落巴黎+妈妈还不知)
+1. [过年对于留守老人就像一场热闹的梦](https://so.toutiao.com/search?keyword=过年对于留守老人就像一场热闹的梦)
+1. [沙尘致青海往新疆方向道路交通管制](https://so.toutiao.com/search?keyword=沙尘致青海往新疆方向道路交通管制)
+1. [徐冬冬尹子维订婚](https://so.toutiao.com/search?keyword=徐冬冬尹子维订婚)
+1. [三亚机票今年为何涨得那么猛](https://so.toutiao.com/search?keyword=三亚机票今年为何涨得那么猛)
+1. [胡兵伦敦街头走出T台步伐](https://so.toutiao.com/search?keyword=胡兵伦敦街头走出T台步伐)
+1. [乌克兰外长接受采访时抽起了雪茄](https://so.toutiao.com/search?keyword=乌克兰外长接受采访时抽起了雪茄)
+1. [1家5口从三亚飞回新疆要花10万](https://so.toutiao.com/search?keyword=1家5口从三亚飞回新疆要花10万)
+1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
+1. [小伙套大鹅宛如来进货](https://so.toutiao.com/search?keyword=小伙套大鹅宛如来进货)
+1. [徐巧芯：韩国瑜对人的处理非常厉害](https://so.toutiao.com/search?keyword=徐巧芯：韩国瑜对人的处理非常厉害)
+1. [左右哥“再就业”](https://so.toutiao.com/search?keyword=左右哥“再就业”)
+1. [金正恩原声讲话曝光 目标直指韩国](https://so.toutiao.com/search?keyword=金正恩原声讲话曝光+目标直指韩国)
+1. [官方辟谣花3万包游艇从三亚到湛江](https://so.toutiao.com/search?keyword=官方辟谣花3万包游艇从三亚到湛江)
+1. [国产三蹦子今年可能去海外建厂](https://so.toutiao.com/search?keyword=国产三蹦子今年可能去海外建厂)
+1. [A股明日开市](https://so.toutiao.com/search?keyword=A股明日开市)
+1. [麦克朗卫冕全明星扣篮大赛冠军](https://so.toutiao.com/search?keyword=麦克朗卫冕全明星扣篮大赛冠军)
+1. [航拍江苏一工厂爆炸：现场一片狼藉](https://so.toutiao.com/search?keyword=航拍江苏一工厂爆炸：现场一片狼藉)
+1. [张名扬101秒KO对手](https://so.toutiao.com/search?keyword=张名扬101秒KO对手)
+1. [印外长当着布林肯面回答涉美俄问题](https://so.toutiao.com/search?keyword=印外长当着布林肯面回答涉美俄问题)
 1. [颜宁称在深圳已梦想成真](https://so.toutiao.com/search?keyword=颜宁称在深圳已梦想成真)
 1. [甘肃一酒店免费接收30余名滞留旅客](https://so.toutiao.com/search?keyword=甘肃一酒店免费接收30余名滞留旅客)
 1. [男子酒驾弃车逃跑被警民合力抓回](https://so.toutiao.com/search?keyword=男子酒驾弃车逃跑被警民合力抓回)
@@ -50,9 +70,7 @@
 1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
 1. [魅族宣布全面押注AI](https://so.toutiao.com/search?keyword=魅族宣布全面押注AI)
 1. [男子高速路旁摆摊卖炒粉](https://so.toutiao.com/search?keyword=男子高速路旁摆摊卖炒粉)
-1. [丈夫被妻子嫌弃不挣钱忍不住发脾气](https://so.toutiao.com/search?keyword=丈夫被妻子嫌弃不挣钱忍不住发脾气)
 1. [台舆论关注大陆厦金海域巡查常态化](https://so.toutiao.com/search?keyword=台舆论关注大陆厦金海域巡查常态化)
-1. [小伙套大鹅宛如来进货](https://so.toutiao.com/search?keyword=小伙套大鹅宛如来进货)
 1. [非盟领导人谴责以色列军事行动](https://so.toutiao.com/search?keyword=非盟领导人谴责以色列军事行动)
 1. [堵车把车里的阿拉斯加堵哭了](https://so.toutiao.com/search?keyword=堵车把车里的阿拉斯加堵哭了)
 1. [男子离家返程 母亲默默流泪](https://so.toutiao.com/search?keyword=男子离家返程+母亲默默流泪)
@@ -63,7 +81,6 @@
 1. [网友遇小伙在高速卖炒粉 生意很好](https://so.toutiao.com/search?keyword=网友遇小伙在高速卖炒粉+生意很好)
 1. [女子高铁上看高速堵车 堵十多公里](https://so.toutiao.com/search?keyword=女子高铁上看高速堵车+堵十多公里)
 1. [龙年首周解禁股出炉](https://so.toutiao.com/search?keyword=龙年首周解禁股出炉)
-1. [女子高速遇陌生男子爬车顶抢方向盘](https://so.toutiao.com/search?keyword=女子高速遇陌生男子爬车顶抢方向盘)
 1. [极兔快递股价跳水](https://so.toutiao.com/search?keyword=极兔快递股价跳水)
 1. [券商：2024年是新一轮牛市起点之年](https://so.toutiao.com/search?keyword=券商：2024年是新一轮牛市起点之年)
 1. [专家建议上班第一天少干点活](https://so.toutiao.com/search?keyword=专家建议上班第一天少干点活)
@@ -71,7 +88,6 @@
 1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
 1. [沈腾方辟谣新电影](https://so.toutiao.com/search?keyword=沈腾方辟谣新电影)
 1. [A股节后能否“开门红”](https://so.toutiao.com/search?keyword=A股节后能否“开门红”)
-1. [过年对于留守老人就像一场热闹的梦](https://so.toutiao.com/search?keyword=过年对于留守老人就像一场热闹的梦)
 1. [天津4人入选中国女排](https://so.toutiao.com/search?keyword=天津4人入选中国女排)
 1. [女排集训张常宁回归 朱婷未入围](https://so.toutiao.com/search?keyword=女排集训张常宁回归+朱婷未入围)
 1. [湖南一洒水车碾压路人后逃逸](https://so.toutiao.com/search?keyword=湖南一洒水车碾压路人后逃逸)
@@ -98,7 +114,6 @@
 1. [海南离岛小车堵到“∞”型转圈圈](https://so.toutiao.com/search?keyword=海南离岛小车堵到“∞”型转圈圈)
 1. [“AIT”处长为何拜会韩国瑜](https://so.toutiao.com/search?keyword=“AIT”处长为何拜会韩国瑜)
 1. [拜登痛斥众议院关键时刻去“度假”](https://so.toutiao.com/search?keyword=拜登痛斥众议院关键时刻去“度假”)
-1. [三亚机票今年为何涨得那么猛](https://so.toutiao.com/search?keyword=三亚机票今年为何涨得那么猛)
 1. [湖南省南县捣毁一卖淫窝点 6人被抓](https://so.toutiao.com/search?keyword=湖南省南县捣毁一卖淫窝点+6人被抓)
 1. [广东实施基础研究十年“卓粤”计划](https://so.toutiao.com/search?keyword=广东实施基础研究十年“卓粤”计划)
 1. [三亚部分返程机票回落至3000元档](https://so.toutiao.com/search?keyword=三亚部分返程机票回落至3000元档)
