--- a/archives/toutiao-search/2024-02-18.md
+++ b/archives/toutiao-search/2024-02-18.md
@@ -1,58 +1,71 @@
 # 2024-02-18
 
-共 303 条
+共 314 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Feb 18 2024 20:07:41 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Feb 18 2024 21:00:42 GMT+0800 (China Standard Time) -->
 1. [司机卡点最后一分钟免费下高速](https://so.toutiao.com/search?keyword=司机卡点最后一分钟免费下高速)
-1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
+1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
 1. [春节国内出游人次创新高](https://so.toutiao.com/search?keyword=春节国内出游人次创新高)
-1. [小车零点后下高速被收全程费用](https://so.toutiao.com/search?keyword=小车零点后下高速被收全程费用)
+1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
 1. [学校否认秦朗巴黎丢寒假作业](https://so.toutiao.com/search?keyword=学校否认秦朗巴黎丢寒假作业)
-1. [西安沙尘暴](https://so.toutiao.com/search?keyword=西安沙尘暴)
 1. [江苏一工厂爆炸致3死2失联](https://so.toutiao.com/search?keyword=江苏一工厂爆炸致3死2失联)
-1. [男子观影打呼噜遭暴打](https://so.toutiao.com/search?keyword=男子观影打呼噜遭暴打)
+1. [中国海警在厦金海域开展执法行动](https://so.toutiao.com/search?keyword=中国海警在厦金海域开展执法行动)
+1. [男子走应急车道鸣笛惹众怒被包围](https://so.toutiao.com/search?keyword=男子走应急车道鸣笛惹众怒被包围)
 1. [多地有人捡到钱包转发寻失主？假的](https://so.toutiao.com/search?keyword=多地有人捡到钱包转发寻失主？假的)
 1. [匈牙利总理欧尔班会见王小洪](https://so.toutiao.com/search?keyword=匈牙利总理欧尔班会见王小洪)
 1. [因堵车延迟下高速应付全程高速费吗](https://so.toutiao.com/search?keyword=因堵车延迟下高速应付全程高速费吗)
-1. [贾玲烫了大波浪穿礼服唱歌](https://so.toutiao.com/search?keyword=贾玲烫了大波浪穿礼服唱歌)
-1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
-1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
-1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
-1. [女子购物被收银员拒收一毛硬币](https://so.toutiao.com/search?keyword=女子购物被收银员拒收一毛硬币)
-1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
+1. [王毅：中国经济长期向好势头更趋明显](https://so.toutiao.com/search?keyword=王毅：中国经济长期向好势头更趋明显)
 1. [《摔跤吧！爸爸》小芭比塔演员去世](https://so.toutiao.com/search?keyword=《摔跤吧！爸爸》小芭比塔演员去世)
+1. [小车零点后下高速被收全程费用](https://so.toutiao.com/search?keyword=小车零点后下高速被收全程费用)
 1. [高速堵车第一辆车在干啥](https://so.toutiao.com/search?keyword=高速堵车第一辆车在干啥)
-1. [以军轰炸加沙地带中部至少40人死亡](https://so.toutiao.com/search?keyword=以军轰炸加沙地带中部至少40人死亡)
-1. [高速免费最后时刻司机狂按喇叭](https://so.toutiao.com/search?keyword=高速免费最后时刻司机狂按喇叭)
-1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
-1. [停火谈判遇阻 战火烧至加沙最南端](https://so.toutiao.com/search?keyword=停火谈判遇阻+战火烧至加沙最南端)
-1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
-1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
 1. [游客吐槽长白山15分钟车程要150元](https://so.toutiao.com/search?keyword=游客吐槽长白山15分钟车程要150元)
-1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
-1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
-1. [雷军晒为员工发开工红包视频](https://so.toutiao.com/search?keyword=雷军晒为员工发开工红包视频)
+1. [老人旅游时睡梦中去世 家属起诉旅行社](https://so.toutiao.com/search?keyword=老人旅游时睡梦中去世+家属起诉旅行社)
+1. [高速免费最后时刻司机狂按喇叭](https://so.toutiao.com/search?keyword=高速免费最后时刻司机狂按喇叭)
+1. [飞海南机票价格断崖式暴跌](https://so.toutiao.com/search?keyword=飞海南机票价格断崖式暴跌)
 1. [新疆气温-52.3℃刷新历史最低极值](https://so.toutiao.com/search?keyword=新疆气温-52.3℃刷新历史最低极值)
+1. [甘肃酒泉4万名滞留旅客已被安置](https://so.toutiao.com/search?keyword=甘肃酒泉4万名滞留旅客已被安置)
 1. [马丽测评了14条光腿神器](https://so.toutiao.com/search?keyword=马丽测评了14条光腿神器)
-1. [官方通报旅客挤不上K225次列车](https://so.toutiao.com/search?keyword=官方通报旅客挤不上K225次列车)
-1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
+1. [新疆特强沙尘暴：天空赤橙像异世界](https://so.toutiao.com/search?keyword=新疆特强沙尘暴：天空赤橙像异世界)
 1. [邱毅谈美军特战小组常驻金门](https://so.toutiao.com/search?keyword=邱毅谈美军特战小组常驻金门)
-1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
-1. [16岁女篮队员身高已超过姚明](https://so.toutiao.com/search?keyword=16岁女篮队员身高已超过姚明)
 1. [女考古学家仍用着40年前的灯绳](https://so.toutiao.com/search?keyword=女考古学家仍用着40年前的灯绳)
-1. [女子高速遇陌生男子爬车顶抢方向盘](https://so.toutiao.com/search?keyword=女子高速遇陌生男子爬车顶抢方向盘)
-1. [丈夫被妻子嫌弃不挣钱忍不住发脾气](https://so.toutiao.com/search?keyword=丈夫被妻子嫌弃不挣钱忍不住发脾气)
-1. [小学生寒假作业落巴黎 妈妈还不知](https://so.toutiao.com/search?keyword=小学生寒假作业落巴黎+妈妈还不知)
 1. [过年对于留守老人就像一场热闹的梦](https://so.toutiao.com/search?keyword=过年对于留守老人就像一场热闹的梦)
-1. [沙尘致青海往新疆方向道路交通管制](https://so.toutiao.com/search?keyword=沙尘致青海往新疆方向道路交通管制)
+1. [林孝埈与刘少昂发生碰撞双双倒地](https://so.toutiao.com/search?keyword=林孝埈与刘少昂发生碰撞双双倒地)
+1. [春节上门喂宠物8天挣上万](https://so.toutiao.com/search?keyword=春节上门喂宠物8天挣上万)
 1. [徐冬冬尹子维订婚](https://so.toutiao.com/search?keyword=徐冬冬尹子维订婚)
-1. [三亚机票今年为何涨得那么猛](https://so.toutiao.com/search?keyword=三亚机票今年为何涨得那么猛)
-1. [胡兵伦敦街头走出T台步伐](https://so.toutiao.com/search?keyword=胡兵伦敦街头走出T台步伐)
+1. [院中三轮车被飘来的孔明灯引燃](https://so.toutiao.com/search?keyword=院中三轮车被飘来的孔明灯引燃)
 1. [乌克兰外长接受采访时抽起了雪茄](https://so.toutiao.com/search?keyword=乌克兰外长接受采访时抽起了雪茄)
 1. [1家5口从三亚飞回新疆要花10万](https://so.toutiao.com/search?keyword=1家5口从三亚飞回新疆要花10万)
-1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
+1. [中国缘何连续两个月增持美国国债](https://so.toutiao.com/search?keyword=中国缘何连续两个月增持美国国债)
+1. [王毅：统一必将实现](https://so.toutiao.com/search?keyword=王毅：统一必将实现)
+1. [女子高速遇陌生男子爬车顶抢方向盘](https://so.toutiao.com/search?keyword=女子高速遇陌生男子爬车顶抢方向盘)
 1. [小伙套大鹅宛如来进货](https://so.toutiao.com/search?keyword=小伙套大鹅宛如来进货)
+1. [演员李勤勤收养周海媚爱犬](https://so.toutiao.com/search?keyword=演员李勤勤收养周海媚爱犬)
+1. [阿夫杰耶夫卡之战后乌军境况不乐观](https://so.toutiao.com/search?keyword=阿夫杰耶夫卡之战后乌军境况不乐观)
+1. [高合汽车宣布停工停产6个月](https://so.toutiao.com/search?keyword=高合汽车宣布停工停产6个月)
+1. [胡兵伦敦街头走出T台步伐](https://so.toutiao.com/search?keyword=胡兵伦敦街头走出T台步伐)
+1. [16岁女篮队员身高已超过姚明](https://so.toutiao.com/search?keyword=16岁女篮队员身高已超过姚明)
+1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
+1. [游客借位拍照与大佛击掌](https://so.toutiao.com/search?keyword=游客借位拍照与大佛击掌)
+1. [王毅：中国从来没有发动过战争](https://so.toutiao.com/search?keyword=王毅：中国从来没有发动过战争)
+1. [今年还有4次调休](https://so.toutiao.com/search?keyword=今年还有4次调休)
+1. [开工第一天你收到开工红包了吗](https://so.toutiao.com/search?keyword=开工第一天你收到开工红包了吗)
+1. [券商：AI视频进入大规模应用前夜](https://so.toutiao.com/search?keyword=券商：AI视频进入大规模应用前夜)
+1. [特朗普卖球鞋](https://so.toutiao.com/search?keyword=特朗普卖球鞋)
+1. [高合汽车辟谣“宣布解散”传闻](https://so.toutiao.com/search?keyword=高合汽车辟谣“宣布解散”传闻)
+1. [高三班主任强吻女学生被停职](https://so.toutiao.com/search?keyword=高三班主任强吻女学生被停职)
+1. [西安沙尘暴](https://so.toutiao.com/search?keyword=西安沙尘暴)
+1. [男子观影打呼噜遭暴打](https://so.toutiao.com/search?keyword=男子观影打呼噜遭暴打)
+1. [女子购物被收银员拒收一毛硬币](https://so.toutiao.com/search?keyword=女子购物被收银员拒收一毛硬币)
+1. [以军轰炸加沙地带中部至少40人死亡](https://so.toutiao.com/search?keyword=以军轰炸加沙地带中部至少40人死亡)
+1. [停火谈判遇阻 战火烧至加沙最南端](https://so.toutiao.com/search?keyword=停火谈判遇阻+战火烧至加沙最南端)
+1. [雷军晒为员工发开工红包视频](https://so.toutiao.com/search?keyword=雷军晒为员工发开工红包视频)
+1. [官方通报旅客挤不上K225次列车](https://so.toutiao.com/search?keyword=官方通报旅客挤不上K225次列车)
+1. [新疆14级大风](https://so.toutiao.com/search?keyword=新疆14级大风)
+1. [丈夫被妻子嫌弃不挣钱忍不住发脾气](https://so.toutiao.com/search?keyword=丈夫被妻子嫌弃不挣钱忍不住发脾气)
+1. [小学生寒假作业落巴黎 妈妈还不知](https://so.toutiao.com/search?keyword=小学生寒假作业落巴黎+妈妈还不知)
+1. [沙尘致青海往新疆方向道路交通管制](https://so.toutiao.com/search?keyword=沙尘致青海往新疆方向道路交通管制)
+1. [三亚机票今年为何涨得那么猛](https://so.toutiao.com/search?keyword=三亚机票今年为何涨得那么猛)
 1. [徐巧芯：韩国瑜对人的处理非常厉害](https://so.toutiao.com/search?keyword=徐巧芯：韩国瑜对人的处理非常厉害)
 1. [左右哥“再就业”](https://so.toutiao.com/search?keyword=左右哥“再就业”)
 1. [金正恩原声讲话曝光 目标直指韩国](https://so.toutiao.com/search?keyword=金正恩原声讲话曝光+目标直指韩国)
@@ -67,7 +80,6 @@
 1. [甘肃一酒店免费接收30余名滞留旅客](https://so.toutiao.com/search?keyword=甘肃一酒店免费接收30余名滞留旅客)
 1. [男子酒驾弃车逃跑被警民合力抓回](https://so.toutiao.com/search?keyword=男子酒驾弃车逃跑被警民合力抓回)
 1. [颜宁感慨深圳半年将毛坯房变实验室](https://so.toutiao.com/search?keyword=颜宁感慨深圳半年将毛坯房变实验室)
-1. [Sora的真正价值在哪](https://so.toutiao.com/search?keyword=Sora的真正价值在哪)
 1. [魅族宣布全面押注AI](https://so.toutiao.com/search?keyword=魅族宣布全面押注AI)
 1. [男子高速路旁摆摊卖炒粉](https://so.toutiao.com/search?keyword=男子高速路旁摆摊卖炒粉)
 1. [台舆论关注大陆厦金海域巡查常态化](https://so.toutiao.com/search?keyword=台舆论关注大陆厦金海域巡查常态化)
@@ -85,7 +97,6 @@
 1. [券商：2024年是新一轮牛市起点之年](https://so.toutiao.com/search?keyword=券商：2024年是新一轮牛市起点之年)
 1. [专家建议上班第一天少干点活](https://so.toutiao.com/search?keyword=专家建议上班第一天少干点活)
 1. [大量车占应急车道警车2公里走2小时](https://so.toutiao.com/search?keyword=大量车占应急车道警车2公里走2小时)
-1. [俄方称俄军已完全控制阿夫杰耶夫卡](https://so.toutiao.com/search?keyword=俄方称俄军已完全控制阿夫杰耶夫卡)
 1. [沈腾方辟谣新电影](https://so.toutiao.com/search?keyword=沈腾方辟谣新电影)
 1. [A股节后能否“开门红”](https://so.toutiao.com/search?keyword=A股节后能否“开门红”)
 1. [天津4人入选中国女排](https://so.toutiao.com/search?keyword=天津4人入选中国女排)
